nav layout fix + css alignment

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -23,7 +23,7 @@
 
 .nav-button {
     cursor:pointer;
-    border:1px solid rgb(0, 17, 255);
+    border:none;
     display:flex;
     transition:transform 0.3s ease-in;
 
@@ -32,9 +32,10 @@
 
 }
 
-.nav-wrap {
-    border:1px solid red;
+.nav-button-open-box {
+    margin-bottom:7px;
 }
+
 
 
 
@@ -71,11 +72,14 @@
 
     .nav-box {
         display:flex;
+        width:100%;
+        
+        height:100%;
     }
 
     h3 {
-        font-weight:600;
-        letter-spacing: 1px;
+        font-weight:500;
+        letter-spacing: .5px;
     }
 }
 
@@ -175,20 +179,29 @@
         height:80px;
         width:100%;
 
-        background-color:rgb(235, 166, 64);
+        background-color:rgb(235, 167, 64);
 
         color:rgb(255, 255, 255);
-        text-shadow:1px 1px 1px rgba(0, 0, 0, 0.082);
     }
 
-     .nav-item h3 {
+     h3 {
         margin-bottom:12px;
-  
-        padding-left:5px;
-        letter-spacing: 2px;
-    }
+        padding-left:10px;
     
-    .active-nav-box {
+        font-size:21px;
+    }
+
+    .nav-item-interactive-box:nth-child(2){
+        padding-left:10px;
+    }
+
+    .nav-button-close-box {
+        margin-bottom:7px;
+    }
+
+  
+    
+    .nav-wrap {
         transform: translateY(0%);
     }
 
@@ -314,7 +327,7 @@
 
     h3{
         align-self: flex-end;
-        font-size: 16px;
+
     }
 
     //nav-item-hover-color-animation
